--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#A6A7A6</color>
-    <color name="colorPrimaryDark">#FCFDFC</color>
-    <color name="colorAccent">#D4E5AEC2</color>
+    <color name="colorPrimary">#171717</color>
+    <color name="colorPrimaryDark">#1B191A</color>
+    <color name="colorAccent">#D4F5EAEE</color>
 </resources>
